# action_labeler

./: .gitignore  README.md  action_labeler.py  base.py  dataset.py  filters.py  helpers.py  models.py  preprocessors.py  prompts.py  pyproject.toml  requirements.txt  setup.py
action_description/: helpers.py
action_labeler/: __init__.py  __version__.py  dataclasses.py
action_labeler/datasets/: __init__.py  yolov8_dataset.py
action_labeler/detections/: __init__.py  detection.py  detection_manager.py
action_labeler/filters/: __init__.py  base.py  max_detections.py  ratio.py
action_labeler/helpers/: __init__.py  detections_helpers.py  general.py  image_helpers.py  parallel.py  yolov8_dataset.py
action_labeler/labeler/: __init__.py  base.py  dataset.py  detection_labeler.py  labeler.py  segmentation_labeler.py
action_labeler/models/: __init__.py  base.py  chat_gpt.py  gemma3.py  janus7b.py  llama_cpp.py  ovis2_16b.py  ovis2_34b.py  paligemma.py  qwen25.py  qwen25_72b.py
action_labeler/preprocessors/: __init__.py  base.py  bounding_box.py  crop.py  mask.py  resize.py  text.py
action_labeler/prompt/: __init__.py  action_prompt.py  base.py  description_action_prompt.py  description_only_prompt.py  text_prompt.py
helpers/: __init__.py  convert_ultralytics_to_coco.py  detection_helpers.py  general.py  image_helpers.py  pickle_helpers.py  plot.py
notebooks/: 0 - Helpers.ipynb  1 - Get Bounding Boxes.ipynb  1 - Get Detections.ipynb  2 - Action Labeling.ipynb
notebooks/runs/detect/predict/labels/: dog_laying_down_1.txt
notebooks/samples/: classification.pickle  data.yaml  description.pickle
notebooks/samples/segment/: dog_laying_down_1.txt
tests/detections/: test_detection.py
tests/helpers/: test_detections_helpers.py
v2/: base.py
v2/action_labeler/: __init__.py  action_labeler_dataset.py  base.py  helpers.py  multi_image_labeler.py
v2/filters/: __init__.py  max_detections.py  ratio.py
v2/models/: __init__.py  base.py  chat_gpt.py  janus7b.py  llama_cpp.py  ovis2_16b.py  ovis2_34b.py  phi4.py  qwen25.py
v2/preprocessors/: __init__.py  bounding_box.py  crop.py  mask.py  resize.py
v2/prompt/: __init__.py  base.py  description_action_prompt.py  llm_action_prompt.py  text_prompt.py
